--- a/src/main/resources/templates/customer_management/EnterCustomerData.html
+++ b/src/main/resources/templates/customer_management/EnterCustomerData.html
@@ -66,34 +66,49 @@
         </div>
     </nav>
 </header>
-
-
+    <h3>Add a new customer</h3>
     <form action="addCustomer" method="post" th:object="${customerDataForm}">
-        <p>Name</p>
-        <input type="text" name="name" th:field="*{name}"/>
-        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-        <p>Address</p>
-        <input type="text" name="address" th:field="*{address}"/>
-        <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
-        <p>Postal code</p>
-        <input type="text" name="postalCode" th:field="*{postalCode}"/>
-        <p th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"></p>
-        <p>City</p>
-        <input type="text" name="city" th:field="*{city}"/>
-        <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></p>
-        <p>Country</p>
-        <input type="text" name="country" th:field="*{country}"/>
-        <p th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></p>
-        <p>Phone</p>
-        <input type="text" name="phone" th:field="*{phone}"/>
-        <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
-        <p>Email</p>
-        <input type="text" name="email" th:field="*{email}"/>
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-        <p>Social security number</p>
-        <input type="text" name="socialSecurityNumber" th:field="*{socialSecurityNumber}"/>
-        <p th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></p>
-        <input type="submit" value="Enter"/>
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" name="name" class="form-control" th:field="*{name}" placeholder="Name"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+        </div>
+        <div class="form-group">
+            <label>Address</label>
+            <input type="text" name="address" class="form-control" th:field="*{address}" placeholder="Address"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></small>
+        </div>
+        <div class="form-group">
+            <label>Postal code</label>
+            <input type="text" name="postalCode" class="form-control" th:field="*{postalCode}" placeholder="Postal code"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"></small>
+        </div>
+        <div class="form-group">
+            <label>City</label>
+            <input type="text" name="city" class="form-control" th:field="*{city}" placeholder="City"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></small>
+        </div>
+        <div class="form-group">
+            <label>Country</label>
+            <input type="text" name="country" class="form-control" th:field="*{country}" placeholder="Country"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></small>
+        </div>
+        <div class="form-group">
+            <label>Phone</label>
+            <input type="text" name="phone" class="form-control" th:field="*{phone}" placeholder="Phone"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
+        </div>
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" name="email" class="form-control" th:field="*{email}" placeholder="Email"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+        </div>
+        <div class="form-group">
+            <label>Social security number</label>
+            <input type="text" name="socialSecurityNumber" class="form-control" th:field="*{socialSecurityNumber}" placeholder="Social security number"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></small>
+        </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
 
