--- a/src/main/resources/templates/login_management/LogInPage.html
+++ b/src/main/resources/templates/login_management/LogInPage.html
@@ -21,14 +21,19 @@
 
     </nav>
 </header>
-    <h1>Video Rental</h1>
-    <form action="startPage" method="post">
+
+<form action="startPage" method="post">
+    <div class="form-group">
         <label>Username</label>
-        <input type="text" name="username"/><br/>
-        <label>Password</label>
-        <input type="password"  name="password"/><br/>
-        <input type="submit" value="Login"/>
-    </form>
+        <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary">Log in</button>
+</form>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
