--- a/src/main/resources/templates/login_management/StartPage.html
+++ b/src/main/resources/templates/login_management/StartPage.html
@@ -69,7 +69,7 @@
 
 
     <form action="logOut" method="post">
-        <input type="submit" value="Log out"/>
+        <button type="submit" class="btn btn-primary">Log out</button>
     </form>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
