--- a/src/main/resources/templates/rental_management/RentAMovie.html
+++ b/src/main/resources/templates/rental_management/RentAMovie.html
@@ -69,16 +69,22 @@
 
     <p th:text="${message}"></p>
     <form action="rent" method="post" th:object="${rentalIdForm}">
-        <p>Enter customers social security number:</p>
-        <input type="text" name="socialSecurityNumber" th:field="*{socialSecurityNumber}"/>
-        <p th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></p>
-        <p>Enter movieId</p>
-        <input type="text" name="movieId" th:field="*{movieId}"/>
-        <p th:if="${#fields.hasErrors('movieId')}" th:errors="*{movieId}"></p>
-        <p>Enter date:</p>
-        <input type="text" name="rentalDate" th:field="*{rentalDate}"/>
-        <p th:if="${#fields.hasErrors('rentalDate')}" th:errors="*{rentalDate}"></p>
-        <input type="submit" value="Enter"/>
+        <div class="form-group">
+            <label>Social security number</label>
+            <input type="text" name="socialSecurityNumber" class="form-control" th:field="*{socialSecurityNumber}" placeholder="Social security number"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></small>
+        </div>
+        <div class="form-group">
+            <label>Enter movieId</label>
+            <input type="text" name="movieId" class="form-control" th:field="*{movieId}" placeholder="Movie Id"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('movieId')}" th:errors="*{movieId}"></small>
+        </div>
+        <div class="form-group">
+            <label>Enter date:</label>
+            <input type="text" name="rentalDate" class="form-control" th:field="*{rentalDate}" placeholder="Date"/>
+            <small class="form-text text-muted" th:if="${#fields.hasErrors('rentalDate')}" th:errors="*{rentalDate}"></small>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
 
