--- a/src/main/resources/templates/customer_management/EditCustomerData.html
+++ b/src/main/resources/templates/customer_management/EditCustomerData.html
@@ -66,22 +66,29 @@
         </div>
     </nav>
 </header>
+<div class="jumbotron">
     <h3>Edit customer data</h3>
     <form action="editCustomer" method="post">
-        <div class="form-group">
-            <label>Enter customers social security number:</label>
-            <input type="text" name="socialSecurityNumber" class="form-control" placeholder="Social security number"/>
+        <div class="form-group row">
+            <div class="col-auto">
+                <div class="form-group">
+                    <label>Enter customers social security number:</label>
+                    <input type="text" name="socialSecurityNumber" class="form-control"
+                           placeholder="Social security number"/>
+                </div>
+                <div class="form-group">
+                    <label>Type the name of a property: (name, address, postalCode, city, country, phone, email)</label>
+                    <input type="text" name="property" class="form-control" placeholder="Property"/>
+                </div>
+                <div class="form-group">
+                    <label>Enter new value:</label>
+                    <input type="text" name="newValue" class="form-control" placeholder="New value"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Type the name of a property: (name, address, postalCode, city, country, phone, email)</label>
-            <input type="text" name="property" class="form-control" placeholder="Property"/>
-        </div>
-        <div class="form-group">
-            <label>Enter new value:</label>
-            <input type="text" name="newValue" class="form-control" placeholder="New value"/>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
