--- a/src/main/resources/templates/video_management/FindMovie.html
+++ b/src/main/resources/templates/video_management/FindMovie.html
@@ -66,22 +66,32 @@
         </div>
     </nav>
 </header>
-<p>Search by name</p>
-<form action="findByName" method="post">
-    <div class="form-group">
-        <label>Enter name:</label>
-        <input type="text" name="movieName" class="form-control" placeholder="Name"/>
-    </div>
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
-<p>Search by category</p>
-<form action="findByCategory" method="post">
-    <div class="form-group">
-        <label>Enter category:</label>
-        <input type="text" name="movieCategory" class="form-control" placeholder="Category"/>
-    </div>
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
+<div class="jumbotron">
+    <p>Search by name</p>
+    <form action="findByName" method="post">
+        <div class="form-group row">
+            <div class="col-auto">
+                <div class="form-group">
+                    <label>Enter name:</label>
+                    <input type="text" name="movieName" class="form-control" placeholder="Name"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+    </form>
+    <p>Search by category</p>
+    <form action="findByCategory" method="post">
+        <div class="form-group row">
+            <div class="col-auto">
+                <div class="form-group">
+                    <label>Enter category:</label>
+                    <input type="text" name="movieCategory" class="form-control" placeholder="Category"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+    </form>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
