--- a/src/main/resources/templates/customer_management/ShowCustomerData.html
+++ b/src/main/resources/templates/customer_management/ShowCustomerData.html
@@ -28,7 +28,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" th:href="@{/showList}">Show All</a>
-                        <a class="dropdown-item" th:href="@{/customerData}">Find Customer</a>
+                        <a class="dropdown-item" th:href="@{/findCustomer}">Find Customer</a>
                         <a class="dropdown-item" th:href="@{/customerData}">Add Customer</a>
                         <a class="dropdown-item" th:href="@{/editData}">Edit Customer</a>
                     </div>
