--- a/src/main/resources/templates/login_management/LogInPage.html
+++ b/src/main/resources/templates/login_management/LogInPage.html
@@ -25,11 +25,11 @@
 <form action="startPage" method="post">
     <div class="form-group">
         <label>Username</label>
-        <input type="text" name="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
+        <input type="text" name="username" class="form-control"  placeholder="Enter username">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label >Password</label>
+        <input type="password" name="password" class="form-control" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-primary">Log in</button>
 </form>
