--- a/src/main/resources/templates/customer_management/EnterCustomerData.html
+++ b/src/main/resources/templates/customer_management/EnterCustomerData.html
@@ -28,7 +28,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" th:href="@{/showList}">Show All</a>
-                        <a class="dropdown-item" th:href="@{/findCustomer}">Find Customer</a>
+                        <a class="dropdown-item" th:href="@{/customerData}">Find Customer</a>
                         <a class="dropdown-item" th:href="@{/customerData}">Add Customer</a>
                         <a class="dropdown-item" th:href="@{/editData}">Edit Customer</a>
                     </div>
@@ -66,50 +66,56 @@
         </div>
     </nav>
 </header>
+<div class="jumbotron">
     <h3>Add a new customer</h3>
     <form action="addCustomer" method="post" th:object="${customerDataForm}">
-        <div class="form-group">
-            <label>Name</label>
-            <input type="text" name="name" class="form-control" th:field="*{name}" placeholder="Name"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+        <div class="form-group row">
+            <div class="col-auto">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control" th:field="*{name}" placeholder="Name"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" name="address" class="form-control" th:field="*{address}" placeholder="Address"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Postal code</label>
+                    <input type="text" name="postalCode" class="form-control" th:field="*{postalCode}" placeholder="Postal code"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"></small>
+                </div>
+                <div class="form-group">
+                    <label>City</label>
+                    <input type="text" name="city" class="form-control" th:field="*{city}" placeholder="City"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Country</label>
+                    <input type="text" name="country" class="form-control" th:field="*{country}" placeholder="Country"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Phone</label>
+                    <input type="text" name="phone" class="form-control" th:field="*{phone}" placeholder="Phone"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" name="email" class="form-control" th:field="*{email}" placeholder="Email"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+                </div>
+                <div class="form-group">
+                    <label>Social security number</label>
+                    <input type="text" name="socialSecurityNumber" class="form-control" th:field="*{socialSecurityNumber}" placeholder="Social security number"/>
+                    <small class="form-text text-muted" th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></small>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Address</label>
-            <input type="text" name="address" class="form-control" th:field="*{address}" placeholder="Address"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></small>
-        </div>
-        <div class="form-group">
-            <label>Postal code</label>
-            <input type="text" name="postalCode" class="form-control" th:field="*{postalCode}" placeholder="Postal code"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"></small>
-        </div>
-        <div class="form-group">
-            <label>City</label>
-            <input type="text" name="city" class="form-control" th:field="*{city}" placeholder="City"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></small>
-        </div>
-        <div class="form-group">
-            <label>Country</label>
-            <input type="text" name="country" class="form-control" th:field="*{country}" placeholder="Country"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></small>
-        </div>
-        <div class="form-group">
-            <label>Phone</label>
-            <input type="text" name="phone" class="form-control" th:field="*{phone}" placeholder="Phone"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
-        </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" name="email" class="form-control" th:field="*{email}" placeholder="Email"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-        </div>
-        <div class="form-group">
-            <label>Social security number</label>
-            <input type="text" name="socialSecurityNumber" class="form-control" th:field="*{socialSecurityNumber}" placeholder="Social security number"/>
-            <small class="form-text text-muted" th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></small>
-        </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
 
 
 <!-- Optional JavaScript -->
@@ -124,4 +130,3 @@
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
 </body>
-</html>
