--- a/src/main/resources/templates/rental_management/ReturnMovies.html
+++ b/src/main/resources/templates/rental_management/ReturnMovies.html
@@ -67,31 +67,39 @@
     </nav>
 </header>
 
+<div class="jumbotron">
     <form action="findRentedMovies" method="post">
-        <div class="form-group">
-            <label>Enter customers social security number:</label>
-            <input type="text" name="socialSecurityNumber" class="form-control" placeholder="Social security number"/>
+        <div class="form-group row">
+            <div class="col-auto">
+                <div class="form-group">
+                    <label>Enter customers social security number:</label>
+                    <input type="text" name="socialSecurityNumber" class="form-control"
+                           placeholder="Social security number"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-<table class="table table-hover">
-    <thead>
-    <tr>
-        <td scope="col">Movie Id</td>
-        <td scope="col">Name</td>
-    </tr>
-    </thead>
-    <tbody th:block th:each="movie:${movies}">
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <td scope="col">Movie Id</td>
+            <td scope="col">Name</td>
+        </tr>
+        </thead>
+        <tbody th:block th:each="movie:${movies}">
         <tr>
             <td th:text="${movie.movieId}"></td>
             <td th:text="${movie.name}"></td>
         </tr>
-    </tbody>
-</table>
-<ul class="list-group">
-    <li class="list-group-item" th:text="${date}">Date</li>
-    <li class="list-group-item" th:text="${message}">Message</li>
-</ul>
+        </tbody>
+    </table>
+    <ul class="list-group">
+        <li class="list-group-item" th:text="${date}">Date</li>
+        <li class="list-group-item" th:text="${message}">Message</li>
+    </ul>
+</div>
+
 
 
 <!-- Optional JavaScript -->
