--- a/src/main/resources/templates/customer_management/FindCustomer.html
+++ b/src/main/resources/templates/customer_management/FindCustomer.html
@@ -66,6 +66,7 @@
         </div>
     </nav>
 </header>
+<div class="jumbotron">
 <form action="findById" method="post">
     <div class="form-group">
         <label>Enter customers social security number:</label>
@@ -73,6 +74,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
+</div>
 
 
 <!-- Optional JavaScript -->
