--- a/src/main/resources/templates/video_management/EnterMovieData.html
+++ b/src/main/resources/templates/video_management/EnterMovieData.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="form-group">
                     <label>Description</label>
-                    <textarea class="form-control" placeholder="Enter Description" id="exampleTextarea" rows="3" th:field="*{description}"
+                    <textarea class="form-control"  id="exampleTextarea" rows="3" th:field="*{description}"
                               placeholder="Description"></textarea>
                     <small class="form-text text-muted" th:if="${#fields.hasErrors('description')}"
                            th:errors="*{description}"></small>
